Bug 440590 - Text selection information is not updated when HTML and XUL entries lose focus, r=tbsaunde